# avswu-pack

./: .gitattributes  .gitconfig  .gitignore  README.md  container-exec-root.ps1  container-kill.ps1  container-run.ps1  container-start.ps1  container-stop.ps1  record-veins.sh  xstartup.backup
av_event/: Cargo.toml  lib.rs
avswu-node/: start-polka.sh
avswu_icons/: av_white.psd  bounty_hunter.psd  client_av.psd  delivery_av.psd  manufacturer.psd  rsu.psd
contract_commitment/: Cargo.toml  lib.rs
contract_notification/: Cargo.toml  lib.rs
cpabe/: cpabe-0.11.tar
cpabe/cpabe-0.11/: config.status  cpabe-dec  cpabe-enc  cpabe-keygen  cpabe-setup  test-lang
docker/: Dockerfile  Makefile  old-Dockerfile
docker/startup/: services-start.sh  ubuntu-start.sh
documentation/cpabe/: Advanced Crypto Software Collection.url  Install GMP.url
documentation/crypto/: Node.js Crypto Module.url
documentation/erasure code/: ArashPartow-schifra- C++ Reed Solomon Error Correcting Library https---www.schifra.com.url  Erasure Coding- Backblaze Open Sources Reed-Solomon Code.url  blockchain - How to activate Substrate GRANDPA finalization- - Stack Overflow.url  reed-solomon codes.url
documentation/eslint/: How To Lint and Format Code with ESLint in Visual Studio Code - DigitalOcean.url  Setting up ESLint in React. I love ESLint. It’s a pluggable linter… - by Ross Whitehouse - Medium.url
documentation/googletest/: Assertions Reference - GoogleTest.url  GoogleTest Primer - GoogleTest.url
documentation/grpc/: C++ - gRPC.url  Overview - Protocol Buffers Documentation.url  Rust and gRPC- A complete guide - LogRocket Blog.url  Supported languages - gRPC.url
documentation/ink/: Welcome! - ink! documentation.url
documentation/introduction/: Builders Starter's Guide · Polkadot Wiki.url  Polkadot- Decentralized Web 3.0 Blockchain Interoperability Platform.url  Square One - Substrate_.url  Substrate and Polkadot Stack Exchange.url
documentation/ipfs/: @helia-dag-json - npm.url  @helia-strings - Helia.url  IPFS Powers the Distributed Web.url  IPFS Tutorial - Mutable File System (Lesson 1) - ProtoSchool.url  IPFS in JS - IPFS Docs.url  JS IPFS.url  helia-examples-examples-helia-cjs at main · ipfs-examples-helia-examples.url  helia-examples-examples-helia-cjs-index.js at main · ipfs-examples-helia-examples.url  (+1 more)
grpc-client/grpc_veins_avswu/: CMakeList-vein-merge-attempt.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install-grpc.sh  libs.txt  veins_avswu.proto  veins_client_get.cc  veins_client_push.cc
musig/: CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  install-gmp.sh  install-pbc.sh  musig.c  musig.h  pbc-wrapper.c  pbc-wrapper.h  sig-orig.c  sig.c
saved-sim-results/: sim-size-25-k-12-m-6-dav-120-cav-180-scalar.csv  sim-size-25-k-12-m-6-dav-160-cav-240-scalar.csv  sim-size-25-k-12-m-6-dav-200-cav-300-scalar.csv  sim-size-25-k-12-m-6-dav-240-cav-360-scalar.csv  sim-size-25-k-12-m-6-dav-280-cav-420-scalar.csv  sim-size-25-k-12-m-6-dav-320-cav-480-scalar.csv  sim-size-25-k-12-m-6-dav-40-cav-60-scalar.csv  sim-size-25-k-12-m-6-dav-80-cav-120-scalar.csv  sim-size-5-k-12-m-6-dav-120-cav-180-scalar.csv  sim-size-5-k-12-m-6-dav-160-cav-240-scalar.csv  sim-size-5-k-12-m-6-dav-200-cav-300-scalar.csv  sim-size-5-k-12-m-6-dav-240-cav-360-scalar.csv  sim-size-5-k-12-m-6-dav-280-cav-420-scalar.csv  sim-size-5-k-12-m-6-dav-320-cav-480-scalar.csv  sim-size-5-k-12-m-6-dav-40-cav-60-scalar.csv  sim-size-5-k-12-m-6-dav-80-cav-120-scalar.csv  sim-toy1-size-25-k-12-m-6-dav-40-cav-60-scalar.csv
sim-graphs/: hello-graph.py  sw_update_time_by_erasure.py  sw_update_time_by_number_av.py  sw_update_time_by_size.py  sw_update_tools.py
sim-plots/: erasure-sim-size-025-k-all-m-all-dav-400-cav-600-sw-update-time-std-dev.csv  erasure-sim-size-25-k-all-m-all-dav-400-cav-600-sw-update-delivered.csv  number-av-sim-size-25-k-12-m-6-dav-all-cav-all-all-sw-update-time-std-dev.csv  size-sim-size-all-k-12-m-6-dav-400-cav-600-all-sw-update-time-std-dev.csv  size-sim-size-all-k-12-m-6-dav-400-cav-600-sw-update-delivered.csv  size-sim-toy1-size-all-k-12-m-6-dav-40-cav-60-sw-update-delivered.csv  size-sim-toy1-size-all-k-12-m-6-dav-40-cav-60-sw-update-time.csv
ubuntu-laptop/: avswu.sh  bkup.bash_profile  install-veins.sh  polkadot-dev.sh  polkadot-grpc-dev.sh  rust-dev.sh  setup-laptop.sh  setup.sh  sumo.sh  ubuntu-dev.sh  ubuntu-start.sh
veins-client/: .gitignore  CMakeLists.txt  create_config.cpp  create_input_test_data.cpp  ncmusig-data.txt  ncmusig-tests.sh  test_com_read_write.cpp  test_decode.cpp  test_encode.cpp  test_ipfs1.cpp  test_non_con_musig.cpp  test_non_con_musig.sh  test_non_con_musig_client.cpp  test_shard.cpp  test_shard_cache.cpp
veins-client/inventory/: config.json
veins-client/veins_avswu/: AvswuAVNode.cpp  AvswuAVNode.h  AvswuBlockchain.cpp  AvswuBlockchain.h  AvswuConfig.cpp  AvswuConfig.h  AvswuConfigTest.cpp  AvswuGrpcClient.cpp  AvswuGrpcClient.h  AvswuManufacturerNode.cpp  AvswuManufacturerNode.h  AvswuManufacturerNodeTest.cpp  AvswuNode.cpp  AvswuNode.h  AvswuNotification.cpp  AvswuNotification.h  AvswuNotificationTest.cpp  AvswuOpenSSL.cpp  AvswuOpenSSL.h  AvswuOpenSSLTest.cpp  AvswuPacket.cpp  AvswuPacket.h  AvswuPacketDeliveryRequest.cpp  AvswuPacketDeliveryRequest.h  AvswuPacketDeliveryRequestTest.cpp  AvswuPacketFooter.cpp  AvswuPacketFooter.h  AvswuPacketFooterTest.cpp  AvswuPacketHeader.cpp  AvswuPacketHeader.h  AvswuPacketHeaderTest.cpp  AvswuPacketInventory.cpp  AvswuPacketInventory.h  AvswuPacketInventoryTest.cpp  AvswuPacketNotificationList.cpp  AvswuPacketNotificationList.h  AvswuPacketNotificationListTest.cpp  AvswuPacketShard.cpp  AvswuPacketShard.h  AvswuPacketShardRequestList.cpp  (+31 more)
veins-server/: .eslintrc.json  logger_utils.js  package-lock.json  package.json  polkadot_utils.js  read_commitment_vector.js  read_last_notification_list.js  read_notification.js  veins_avswu.proto  veins_server.js  write_commitment.js  write_notification.js
veins-virtual-box/: instant-veins-debian-setup.sh  instant-veins.bash_profile
windows/bkup-ssh/: config  (+4 more)
(+106 files in other folders)
