[package]
name = "av_event"
version = "0.1.0"
authors = ["[Gabriel Solomon] <[gsolomon@scu.edu]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-beta", default-features = false }
log = "0.4.0"
env_logger = "0.10.1"

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
